# sts-c-sdk

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  sts_demo.c
src/: CMakeLists.txt  sts_api.c  sts_api.h  sts_buf.h  sts_data.c  sts_data.h  sts_define.c  sts_define.h  sts_list.h  sts_process.c  sts_process.h  sts_transport.c  sts_transport.h  sts_util.c  sts_util.h
